# evoke

./: CHANGELOG.md  COPYING  Cargo.toml  README.md
core/: Cargo.toml
core/src/: channel.rs  lib.rs  serde.rs
core/src/channel/: tcp.rs
core/src/client_server/: client.rs  mod.rs  server.rs
examples/: client_server.rs
license/: APACHE  MIT
src/: channel.rs  client.rs  lib.rs  nid.rs  server.rs
src/channel/: tcp.rs
src/client_server/: client.rs  mod.rs  server.rs
