[package]
name = "astral"
version = "0.0.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/astral"
homepage = "https://github.com/zakarumych/astral"
repository = "https://github.com/zakarumych/astral"
readme = "README.md"

[features]
tcp = ["tokio/net"]

[dependencies]
alkahest = { version = "0.1", features = ["derive"] }
scoped-arena = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", optional = true }
futures-task = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "net", "time"] }

[[examples.client_server]]
required-features = ["tcp"]
