[package]
name = "lloth"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lloth"
homepage = "https://github.com/zakarumych/lloth"
repository = "https://github.com/zakarumych/lloth"
readme = "README.md"

[features]
tcp = ["tokio/net", "lloth-core/tcp"]
default = ["tcp"]

client = []
server = []

[dependencies]
lloth-core = { version = "0.1.0", path = "core" }

alkahest = { version = "0.1" }
scoped-arena = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", optional = true }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bytemuck = "1.0"
hecs = "0.6.5"
bitsetium = "0.0"
eyre = "0.6"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "net", "time"] }

[[examples.client_server]]
required-features = ["tcp"]

[workspace]