[package]
name = "evoke"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/evoke"
homepage = "https://github.com/arcana-engine/evoke"
repository = "https://github.com/arcana-engine/evoke"
readme = "README.md"
description = "Powerful netcode for edict based game engines"
categories = ["network-programming", "game-development"]
keywords = ["netcode", "multiplayer", "authoritative-server", "edict"]

[features]
tcp = ["tokio/net", "evoke-core/tcp"]
default = ["tcp"]

client = []
server = []

[dependencies]
evoke-core = { version = "=0.2.0", path = "core" }

alkahest = { version = "0.1" }
scoped-arena = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", optional = true }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bytemuck = "1.0"
edict = { version = "0.1" }
bitsetium = "0.0"
eyre = "0.6"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "net", "time"] }

[[examples.client_server]]
required-features = ["tcp"]

[workspace]

[package.metadata.docs.rs]
all-features = true
