[package]
name = "lloth-core"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lloth-core"
homepage = "https://github.com/zakarumych/lloth"
repository = "https://github.com/zakarumych/lloth"
readme = "../README.md"

[features]
tcp = ["tokio/net"]

[dependencies]
alkahest = { version = "0.1", features = ["derive"] }
scoped-arena = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", optional = true }
tracing = "0.1"
